Project

General

Profile

Actions

Bug #41538

closed

mds: wrong compat can cause MDS to be added daemon registry on mgr but not the fsmap

Added by Patrick Donnelly over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

See Kefu's excellent synopsis of the problem: https://tracker.ceph.com/issues/41525#note-3


Related issues 5 (0 open5 closed)

Related to Dashboard - Bug #41525: mgr/dashboard: Missing service metadata is not handled correctlyResolvedVolker Theile

Actions
Related to mgr - Bug #23967: ceph fs status and Dashboard fail with Python stack traceDuplicate05/02/2018

Actions
Related to CephFS - Bug #42635: mgr: daemon state for mds not availableResolvedPatrick Donnelly

Actions
Has duplicate mgr - Bug #41619: test failure: test_cephfs_get (tasks.mgr.dashboard.test_cephfs.CephfsTest)Duplicate09/03/2019

Actions
Has duplicate mgr - Bug #42011: test_perf_counters_mds_get (tasks.mgr.dashboard.test_perf_counters.PerfCountersControllerTest) ... FAILDuplicate09/23/2019

Actions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Related to Bug #41525: mgr/dashboard: Missing service metadata is not handled correctly added
Actions #2

Updated by Volker Theile over 4 years ago

  • Related to Bug #23967: ceph fs status and Dashboard fail with Python stack trace added
Actions #3

Updated by Kefu Chai over 4 years ago

  • Has duplicate Bug #41619: test failure: test_cephfs_get (tasks.mgr.dashboard.test_cephfs.CephfsTest) added
Actions #4

Updated by Kefu Chai over 4 years ago

  • Has duplicate Bug #42011: test_perf_counters_mds_get (tasks.mgr.dashboard.test_perf_counters.PerfCountersControllerTest) ... FAIL added
Actions #5

Updated by Patrick Donnelly over 4 years ago

  • Status changed from New to Fix Under Review
  • Backport deleted (nautilus)
  • Pull request ID set to 31400

Backport will be tracked in #42635.

Actions #6

Updated by Nathan Cutler over 4 years ago

  • Related to Bug #42635: mgr: daemon state for mds not available added
Actions #7

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF